--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "{{BPREPLACEGITHUB}}/{{BPREPLACESLUG}}",
-    "description": "{{BPREPLACEDESCRIPTION}}",
+    "name": "helsingborg-stad/mod-my-pages",
+    "description": "Modularity Wordpress Plugin",
     "type": "wordpress-plugin",
     "license": "MIT",
     "scripts": {
@@ -10,12 +10,12 @@
     },
     "authors": [
         {
-            "name": "{{BPREPLACEAUTHOR}}",
-            "email": "{{BPREPLACEAUTHOREMAIL}}"
+            "name": "Nikolas Ramstedt",
+            "email": "nikolas.ramstedt@helsingborg.se"
         }
     ],
     "autoload": {
-        "psr-4": {"{{BPREPLACENAMESPACE}}\\": "source/php/"}
+        "psr-4": {"ModMyPages\\": "source/php/"}
     },
     "minimum-stability": "stable",
     "require": {},
