--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "{{BPREPLACESLUG}}",
+  "name": "mod-my-pages",
   "version": "1.0.0",
-  "description": "{{BPREPLACEDESCRIPTION}}",
+  "description": "Modularity Wordpress Plugin",
   "main": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/{{BPREPLACEGITHUB}}/{{BPREPLACESLUG}}"
+    "url": "https://github.com/helsingborg-stad/mod-my-pages"
   },
-  "author": "{{BPREPLACEAUTHOR}}",
+  "author": "Nikolas Ramstedt",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/{{BPREPLACEGITHUB}}/{{BPREPLACESLUG}}/issues"
+    "url": "https://github.com/helsingborg-stad/mod-my-pages/issues"
   },
-  "homepage": "https://github.com/{{BPREPLACEGITHUB}}/{{BPREPLACESLUG}}",
+  "homepage": "https://github.com/helsingborg-stad/mod-my-pages",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "cross-env NODE_ENV=development webpack --watch",
