--- a/source/php/AcfFields/json/mod-my-pages-settings.json
+++ b/source/php/AcfFields/json/mod-my-pages-settings.json
@@ -17,6 +17,27 @@
             },
             "default_value": "",
             "placeholder": ""
+        },
+        {
+            "key": "field_6329bafc7006a",
+            "label": "Session Length",
+            "name": "mod_my_pages_session_length_in_seconds",
+            "type": "number",
+            "instructions": "eg. 600 = 10 minutes",
+            "required": 0,
+            "conditional_logic": 0,
+            "wrapper": {
+                "width": "",
+                "class": "",
+                "id": ""
+            },
+            "default_value": 600,
+            "placeholder": "",
+            "prepend": "",
+            "append": "Seconds",
+            "min": 1,
+            "max": "",
+            "step": ""
         }
     ],
     "location": [
