--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "psr-4": {"ModMyPages\\": "source/php/"}
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "firebase/php-jwt": "^6.3"
+    },
     "require-dev": {
         "brain/monkey": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.31.0",
