Feature/login flow (#1)
* add: searchable blade template paths

* register wp menu

* expose menu items to views

* rm unusued

* rename & add isAuthenticated method

* redirect to not-authorized for ez debug

* add: menu views

* expose cookie name

* check cookie stricter

* dont exit

* only validate used data

* use static method

* add tests

* ProtectedPage with tests

* Signout with tests

* Authenticate user with tests

* add app factory & run app

* add class names to body

* add blade template paths & register menu w. tests

* clean up

* restructure services & run project-wide formatter

* simplify app creation & add login url service with tests

* try break test for CI

* Revert "try break test for CI"

This reverts commit 84cda5bcdfdee58463bc146f62ea3f0fdef09e8b.

* rename action

--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
         "psr-4": {"ModMyPages\\": "source/php/"}
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "firebase/php-jwt": "^6.3"
+    },
     "require-dev": {
         "brain/monkey": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.31.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/phpunit-watcher": "^1.23"
     }
 }
