--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,39 @@
 {
-    "name": "helsingborg-stad/mod-my-pages",
-    "description": "Modularity Wordpress Plugin",
-    "type": "wordpress-plugin",
-    "license": "MIT",
-    "scripts": {
-        "test": "./vendor/bin/phpunit --testdox",
-        "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --testdox",
-        "minimal": "./vendor/bin/phpunit"
-    },
-    "authors": [
-        {
-            "name": "Nikolas Ramstedt",
-            "email": "nikolas.ramstedt@helsingborg.se"
-        }
-    ],
-    "autoload": {
-        "psr-4": {"ModMyPages\\": "source/php/"}
-    },
-    "minimum-stability": "stable",
-    "require": {
-        "firebase/php-jwt": "^5.5.1"
-    },
-    "require-dev": {
-        "brain/monkey": "^2.6",
-        "codedungeon/phpunit-result-printer": "^0.31.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/phpunit-watcher": "^1.23"
+  "name": "helsingborg-stad/mod-my-pages",
+  "description": "Modularity Wordpress Plugin",
+  "type": "wordpress-plugin",
+  "license": "MIT",
+  "scripts": {
+    "test": "./vendor/bin/phpunit --testdox",
+    "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --testdox",
+    "minimal": "./vendor/bin/phpunit"
+  },
+  "authors": [
+    {
+      "name": "Nikolas Ramstedt",
+      "email": "nikolas.ramstedt@helsingborg.se"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "ModMyPages\\": "source/php/"
+    },
+    "files": [
+      "Const.php",
+      "Public.php"
+    ]
+  },
+  "minimum-stability": "stable",
+  "require": {
+    "firebase/php-jwt": "^5.5.1"
+  },
+  "require-dev": {
+    "brain/monkey": "^2.6",
+    "codedungeon/phpunit-result-printer": "^0.31.0",
+    "phpunit/phpunit": "^9.5",
+    "spatie/phpunit-watcher": "^1.23",
+    "vimeo/psalm": "^5.7",
+    "szepeviktor/phpstan-wordpress": "^1.1",
+    "php-stubs/acf-pro-stubs": "^6.0"
+  }
 }
