--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,14 @@
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": true
+  "semi": true,
+  "overrides": [
+    {
+      "files": ["*.php"],
+      "options": {
+        "tabWidth": 4,
+        "printWidth": 100
+      }
+    }
+  ]
 }
