--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint . --ext .ts,.tsx,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.jsx --fix",
-    "format": "prettier --write 'source/**/*.{js,jsx,ts,tsx,css,scss,md}' --config ./.prettierrc"
+    "format": "prettier --write 'source/**/*.{js,jsx,ts,tsx,css,scss,md,php}' --config ./.prettierrc"
   },
   "browserslist": [
     "> 1%",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@prettier/plugin-php": "^0.19.4",
     "@types/jest": "^27.4.1",
     "@types/js-cookie": "^3.0.1",
     "@types/lodash.isequal": "^4.5.6",
@@ -52,7 +53,7 @@
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss-loader": "^6.2.1",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.6",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "ts-jest": "^27.1.4",
@@ -77,5 +78,6 @@
     "plugins": [
       "@babel/plugin-proposal-class-properties"
     ]
-  }
+  },
+  "dependencies": {}
 }
