--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   },
   "homepage": "https://github.com/helsingborg-stad/mod-my-pages",
   "scripts": {
-    "test": "jest",
+    "test:php": "./vendor/bin/phpunit --verbose source/tests",
     "watch": "cross-env NODE_ENV=development webpack --watch",
     "build:dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
-    "lint": "eslint . --ext .ts,.tsx,.jsx",
-    "lint:fix": "eslint . --ext .ts,.tsx,.jsx --fix",
+    "lint": "yarn lint:php",
+    "fix": "yarn lint:php:fix",
+    "lint:types": "tsc --noemit",
+    "lint:php": "./vendor/bin/psalm --config='./psalm.xml' --no-diff",
+    "lint:php:fix": "./vendor/bin/psalm --config='./psalm.xml' --alter --issues=MissingReturnType,MissingClosureReturnType,InvalidFalsableReturnType,MissingParamType",
+    "lint:scripts": "eslint . --ext .ts,.tsx,.jsx",
+    "lint:scripts:fix": "eslint . --ext .ts,.tsx,.jsx --fix",
     "format": "prettier --write 'source/**/*.{js,jsx,ts,tsx,css,scss,md,php}' --config ./.prettierrc"
   },
   "browserslist": [
