Update package and release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mod-my-pages",
+    "name": "@helsingborg-stad/mod-my-pages",
     "version": "1.0.5",
     "description": "Modularity Wordpress Plugin",
     "main": "",
@@ -31,6 +31,7 @@
         "> 1%",
         "not dead"
     ],
+    "files": ["dist/"],
     "devDependencies": {
         "@babel/core": "^7.18.10",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
